@@ -1,4 +1,10 @@
 ====================
+liblunar-gtk-2.2.2
+====================
+NEWS:
+	- 增加liblunar-gtk-preload.so, 以便在运行时切换农历日历显示。
+
+====================
 liblunar-gtk-2.2.1
 ====================
 NEWS:
